--- a/main.html
+++ b/main.html
@@ -4,10 +4,38 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<button type="button" id="open-modal" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#accio-modal">Launch newton modal</button>
+	<div class="modal vertical-center" id="accio-modal">
+		<div class="modal-dialog">
+			<div class="modal-content">
+
+				<div class="modal-header">
+					<h4 class="modal-title">New Modal</h4>
+					<button type="button" id="open-modal" class="btn btn-close" data-bs-dismiss="modal"></button>
+				</div>
+
+				<div class="modal-body">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
+
+				<div class="modal-footer">
+					<button type="button" id="open-modal" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+				</div>
+
+
+
+				
+			</div>
+			
+		</div>
+		
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
