--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<button type="button" id="open-modal" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#accio-modal">Launch newton modal</button>
-	<div class="modal vertical-center" id="accio-modal">
-		<div class="modal-dialog">
+	<button type="button" id="open-modal" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newton-modal">Launch newton modal</button>
+	<div class="modal vertical-center" id="newton-modal">
+		<div class="modal-dialog-centered">
 			<div class="modal-content">
 
 				<div class="modal-header">
